--- a/wp-content/themes/jgl_from_dev/styles/main.css
+++ b/wp-content/themes/jgl_from_dev/styles/main.css
@@ -2739,7 +2739,8 @@ figure:after {
 }
 /* line 212, ../../app/styles/_header.scss */
 .site-nav .search {
-  padding: 8px;
+   padding-left: 5px;
+padding-top: 8px;
 }
 /* line 215, ../../app/styles/_header.scss */
 .site-nav .search label {
