--- a/wp-content/themes/jgl_from_dev/styles/main.css
+++ b/wp-content/themes/jgl_from_dev/styles/main.css
@@ -1,4 +1,4 @@
-﻿/* normalize.css v1.0.2 | MIT License | git.io/normalize */
+/* normalize.css v1.0.2 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
@@ -2786,14 +2786,24 @@ padding-top: 8px;
 body.home .content .container  {
 position: relative;
 } 
-body.home .content #sticky  {
-position: absolute;
+body.home .content #sticky-note-addr  {
+display:none;
 width: 65px;
 height: 173px;
-background: url(../images/sticky.png) ;
+background: url(../images/sticky.png);
+position: absolute;
+top: 90px;
 right: -65px;
-top:870px;
 } 
+body.home .content #sticky-note-addr.sticky{
+position: fixed;
+top:90px;
+right:inherit;
+margin-left: 960px;
+}
+body.home .content #sticky-note-addr > span  {
+display:hidden;
+}
 body.home .content .container section {
   overflow: hidden;
 }
